# ContainerStreamIO

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
TimSevereijns_ContainerPrinter/: .clang-format  CMakeLists.txt
TimSevereijns_ContainerPrinter/.github/workflows/: tests.yml
TimSevereijns_ContainerPrinter/source/: container_printer.h
source/: STL_container_iostream_ops.hh  container_printer.h  container_stream_io.hh
source/ContainerPrinter/: ContainerPrinter.sln
source/ContainerPrinter/Benchmarks/: Benchmarks.cpp  Benchmarks.vcxproj  Benchmarks.vcxproj.filters
source/ContainerPrinter/ContainerPrinter/: ContainerPrinter.hpp  ContainerPrinter.vcxproj  ContainerPrinter.vcxproj.filters  Main.cpp
source/ContainerPrinter/UnitTests/: Catch.hpp  ScopeExit.hpp  UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
tests/: catch_main.cpp  csio_unit_tests.cpp  unit_tests.cpp
utils/: type_name.hh
